--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -79,3 +79,8 @@ article > figure > figcaption {
                                 font-weight: bold;
                                 font-style: oblique;
 }
+
+/*CLASES*/
+.miTarjeta{
+            background-color: blanchedalmond;
+}
